--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,10 @@ header {
   z-index: 999;
 }
 
-header a[href$="home.html"] img {
+#top img {
   height: auto;
   width: 60%;
+  cursor: pointer;
 }
 
 #navbar a {
